<resources>
    <string name="app_name">Формула - Автозапчасти</string>
    <string name="main_menu">Главное меню</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="formula_autoparts">Формула - Автозапчасти</string>
    <string name="signIn">Вход в приложение</string>
    <string name="your_email">Ваш email</string>
    <string name="your_password">Ваш пароль</string>
    <string name="dont_have_registration">Еще нет регистрации?</string>
    <string name="create_new_account">Создать новый аккаунт</string>
    <string name="sign_in">Войти</string>
    <string name="signIn_google">Войти с Google</string>
    <string name="or">- или -</string>
    <string name="register">регистрация пользователя</string>
    <string name="your_name">Ваше имя</string>
    <string name="intern">Стажер</string>
    <string name="employee">Cотрудник</string>
    <string name="registation_agreement_text">Выполняя регистрацию, Вы соглашаетесь с условиями</string>
    <string name="privacy_policy">Политики конфиденциальности</string>
    <string name="privacy_policy1">Политикa конфиденциальности</string>
    <string name="formula_ltd">ОсОО \"Формула\"</string>
    <string name="sign_up">Регистрация</string>
    <string name="signUp_google">Регистрация с Google</string>
    <string name="privacy_policy_text">"<big><b>Политика конфиденциальности для мобильных приложений OcOO «Формула»!</b></big>\n\n
        В настоящей Политике конфиденциальности приводятся сведения о том, как именно используются данные, собранные нашими приложениями о пользователях и их устройствах. Пожалуйста, ознакомьтесь с данными правилами соблюдения конфиденциальности и сообщите нам, если у вас возникнут какие-либо вопросы.\n\n
        Использование Сервисов OcOO «Формула» означает безоговорочное согласие Пользователя с настоящей Политикой и указанными в ней условиями обработки его персональной информации; в случае несогласия с этими условиями Пользователь должен воздержаться от использования Сервисов.\n\n
        1. Данные, которые могут быть собраны с Вашего мобильного устройства:\n\n
           - Персональная информация — информация, которая сама по себе или в сочетании с другой информацией, позволяет идентифицировать личность пользователя, связаться с пользователем, либо определить его местонахождение. Например, имя, фамилия, адрес электронной почты, место работы, должность или номер телефона.\n\n
           - Прочая информация — информация, которая не раскрывает личность пользователя ни сама по себе, ни в сочетании с другой информацией, которую мы получили. Например, информация об устройстве пользователя, данные об использовании приложения или геолокация.\n\n
        Также в наших приложениях могут проводиться дополнительные опросы, в ходе которых вам будет предложено выразить свое мнение о различных продуктах и услугах. Если вы воспользуетесь инструментами приложения, у нас будет возможность сохранять принимаемые и отправляемые вами материалы и сообщения.\n\n
        Кроме того, мы оставляем за собой право осуществлять мониторинг ваших сообщений. Перед тем как передавать нам персональные данные любых других лиц, заручитесь их согласием. Следите за тем, чтобы предоставляемые вами данные были точны и актуальны, и своевременно обновляйте их в случае изменений.\n\n
        2. Использование полученных данных\n\n
        Информация личного характера, полученная в формате электронных регистрационных форм, используется:\n\n
           - в целях регистрации пользователей.\n\n
           - для поддержки работы и совершенствования нашего приложения;\n\n
           - для отслеживания политики и статистики пользования приложением;\n\n
           - а также в целях, разрешенных самим пользователем приложения.\n\n
        Кроме того, мы используем информацию личного характера для поддержания связи с пользователем приложения. Например, если Вы направляете нам сообщение через службу поддержки приложения, мы можем воспользоваться Вашей персональной информацией, чтобы ответить на него. Мы также используем персональную информацию для того, чтобы проинформировать Вас о внесении существенных изменений в настоящую Политику конфиденциальности.\n\n
        Время от времени мы можем приглашать пользователей предоставлять информацию в формате опросов или анкет. Участие в таких опросах или подписных листах совершенно добровольно, следовательно, пользователь может принять решение, раскрывать запрашиваемую информацию или нет. В дополнение к прочим целям, предусмотренным в настоящей Политике конфиденциальности, контактная информация, полученная в связи с опросами или анкетами, используется для сообщения Вам результатов опросов или анкетирования. "</string>
    <string name="spravochnik">СПРАВОЧНИК АВТОЗАПЧАСТЕЙ</string>
    <string name="spravochnik_lowerСase">Справочник автозапчастей</string>
    <string name="main_page">На главную</string>
    <string name="rating">Мой рейтинг</string>
    <string name="users_rating">Рейтинг пользователей</string>
    <string name="saved_pages">Сохраненные статьи</string>
    <string name="take_final_test">Пройти финальный тест</string>
    <string name="edit_test">Редактировать тесты</string>
    <string name="manage_users">Управление пользователями</string>
    <string name="send_email_to_manager">Написать менеджеру</string>
    <string name="send_email_to_developer">Написать разработчику</string>
    <string name="about_app">О приложении</string>
    <string name="logout">Выход</string>
    <string-array name="main_categories">
        <item>Двигатель</item>
        <item>Трансмиссия</item>
        <item>Подвеска</item>
        <item>Рулевое управление</item>
        <item>Система охлаждения</item>
        <item>Система зажигания</item>
        <item>Топливная система</item>
        <item>Тормозная система</item>
        <item>Электрооборудование</item>
        <item>Датчики</item>
        <item>Кузов</item>
        <item>Салон</item>
        <item>Масла</item>
    </string-array>
    <string-array name="main_categories_desc">
        <item>Механизмы и расходники</item>
        <item>МКПП, АКПП, РКПП и др.</item>
        <item>Ходовая часть</item>
        <item>ЭУР, рейка и др.</item>
        <item>Термостат, радиатор и др.</item>
        <item>Свечи, катушки и др.</item>
        <item>Бак, фильтр и др.</item>
        <item>Колодки, диски и др.</item>
        <item>Системы, провода и др.</item>
        <item>Уровень топлива и др.</item>
        <item>Внешний вид</item>
        <item>Интерьер автомобиля</item>
        <item>Виды, характеристики и др.</item>
    </string-array>
    <string-array name="engine">
        <item>Воздушный фильтр</item>
        <item>Глушитель</item>
        <item>Лямбда-зонд</item>
        <item>Коллектор</item>
        <item>Турбина</item>
        <item>ГРМ</item>
        <item>Ремень ГРМ</item>
        <item>Клапаны</item>
        <item>Блок цилиндров</item>
        <item>Головка блока цилиндров</item>
        <item>Поршни</item>
        <item>Цилиндры</item>
        <item>Коленчатый вал</item>
        <item>Распределительный вал</item>
        <item>Масляный фильтр</item>
    </string-array>
    <string-array name="gearbox">
        <item>Устройство МКПП</item>
        <item>Двухвальные и трехвальные МКПП</item>
        <item>Синхронизированные и несинхронизированные МКПП</item>
        <item>Количество ступеней МКПП</item>
        <item>Принцип функционирования МКПП</item>
        <item>Схемы переключения МКПП</item>
        <item>Что такое АКПП?</item>
        <item>Гидротрансформатор АКПП</item>
        <item>Коробка передач АКПП</item>
        <item>Режимы работы АКПП</item>
        <item>Система управления АКПП</item>
        <item>Система смазки и охлаждения АКПП</item>
        <item>Особенность АКПП у Honda</item>
        <item>Устройство РКПП</item>
        <item>КП с двумя сцеплениями</item>
        <item>Принцип работы РКПП</item>
    </string-array>
    <string-array name="transmission">
        <item>Летняя резина</item>
        <item>Диски</item>
        <item>Шипованная резина</item>
        <item>Амортизатор</item>
        <item>Стабилизатор поперечной устойчивости</item>
        <item>Ступица</item>
        <item>Втулка стабилизатора</item>
        <item>Пружины</item>
        <item>Стойки</item>
        <item>ШРУС - шарнир угловых скоростей</item>
        <item>Устройство колеса</item>
    </string-array>
    <string-array name="steering_wheel">
        <item>Устройство электроусилителя руля</item>
        <item>Устройство гидроусилителя руля</item>
        <item>Рулевое управление автомобилем</item>
        <item>Устройство и принцип работы рулевой рейки</item>
        <item>Устройство рулевой колонки автомобиля</item>
        <item>Система активного рулевого управления - AFS</item>
    </string-array>
    <string-array name="cooling">
        <item>Принцип работы системы охлаждения</item>
        <item>Радиатор</item>
        <item>Вентилятор радиатора</item>
        <item>Центробежный насос</item>
        <item>Термостат</item>
        <item>Расширительный бачок</item>
    </string-array>
    <string-array name="igniting">
        <item>Свечи зажигания</item>
        <item>Катушка зажигания</item>
        <item>Устройство датчика Холла</item>
    </string-array>
    <string-array name="fuel">
        <item>Принцип работы топливных систем</item>
        <item>Топливный насос</item>
        <item>Топливный фильтр</item>
        <item>Топливный бак</item>
        <item>Датчик уровня топлива</item>
        <item>Система впрыска дизельных двигателей</item>
        <item>Система впрыска бензиновых двигателей</item>
        <item>Адсорбер</item>
        <item>Форсунки</item>
        <item>Дроссельная заслонка</item>
    </string-array>
    <string-array name="brakes">
        <item>Устройство тормозной системы</item>
        <item>Принцип работы тормозной системы</item>
        <item>Принцип работы дисковых тормозов</item>
        <item>Органические тормозные колодки</item>
        <item>Керамические тормозные колодки</item>
        <item>Полуметаллические тормозные колодки</item>
        <item>Невентилируемые тормозные диски</item>
        <item>Вентилируемые тормозные диски</item>
        <item>Просверленные тормозные диски</item>
        <item>Диск с прорезями</item>
        <item>Диск с канавками</item>
        <item>Волнообразный диск</item>
        <item>Антиблокировочная система - ABS</item>
        <item>Противобуксовочная система - TCS</item>
        <item>Электронный контроль устойчивости - ESP</item>
        <item>Система курсовой устойчивости - ESC</item>
        <item>Система распределения тормозных усилий - EBD</item>
        <item>Электронная блокировка дифференциала - EDS</item>
        <item>Антипробуксовочная система - ASR</item>
        <item>Ручной тормоз</item>
    </string-array>
    <string-array name="electric">
        <item>Аккумулятор</item>
        <item>Стартер</item>
        <item>Генератор</item>
        <item>Предохранители</item>
        <item>Лампы освещения</item>
        <item>Бортовой компьютер</item>
        <item>Магнитола</item>
        <item>Приборная панель</item>
        <item>Панель управления обогревом салона - печка</item>
        <item>Подушка безопасности</item>
    </string-array>
    <string name="app_version">Версия приложения</string>
    <string name="os_version">Версия Android</string>
    <string name="device_model">Модель устройства</string>
    <string name="developer">Разработчик</string>
    <string name="developer_info">Мурод Ходжаев</string>
    <string name="all">Все</string>
    <string name="interns">Стажеры</string>
    <string name="employees">Сотрудники</string>
</resources>