<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/spravochnik"
            android:title="@string/spravochnik" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group1">

        <item
            android:id="@+id/main"
            android:title="@string/main_page"
            android:icon="@drawable/ic_home_24px"/>
        <item
            android:id="@+id/rating"
            android:title="@string/rating"
            android:icon="@drawable/ic_bar_chart_black_48dp"/>
        <item
            android:id="@+id/saved_pages"
            android:icon="@drawable/ic_star_border_black_36dp"
            android:title="@string/saved_pages"/>
        <item
            android:id="@+id/final_test"
            android:icon="@drawable/ic_bullet_list"
            android:title="@string/take_final_test"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">

        <item
            android:id="@+id/send_email_to_manager"
            android:title="@string/send_email_to_manager"
            android:icon="@drawable/ic_email_24px"/>
        <item
            android:id="@+id/about_app"
            android:title="@string/about_app"
            android:icon="@drawable/ic_error_outline_black_48dp"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_36dp"
            android:title="@string/logout"/>

    </group>

</menu>